fixed the height of the first slide of the first slider to prevent scroll from jumping up and down

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -40,6 +40,7 @@ $paddingTopMobile: 28px;
 }
 
 html {
+  overscroll-behavior: none;
   min-height: 100svh;
   background-color: $backgroundColorGreyPage;
 }
