--- a/scss/components/pageBlog/_blogSlider.scss
+++ b/scss/components/pageBlog/_blogSlider.scss
@@ -360,6 +360,10 @@ $sliderMaxWidth: 972px;
 
     .blogSlider__slide.first-slide {
       margin-right: 0;
+
+      @include media("<phone") {
+        height: 50vh;
+      }
     }
 
     .blogSlider__static-description {
